[package]
name = "todo"
version = "0.1.0"
authors = ["Motohiro <c201075@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-rt = "2.1.0"
# actix-web = "3.3.2"
actix-rt = "2.0.2"
actix-web = "4.0.0-beta.3"
thiserror = "1.0.24"
